attempts to fix a layout issue
Tried to fix a responsive design issues

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -27,3 +27,7 @@ body {background-color: $BGcolor;}
 .tab-pane {padding: $tabPanePad}
 
 .sideNav {position: fixed;}
+
+@media screen and (min-width:1200px) {
+    .blogImg Img {width: 75%;} 
+}
